--- a/docker_app_depluy.yml
+++ b/docker_app_depluy.yml
@@ -6,6 +6,15 @@
       yum:
         name: python pip 
         state: present
+    - name: install docker
+      yum:
+        name: docker
+        state: present
+    - name: start docker:
+      service::
+        name: docker
+        state: started
+        enabled: yes
     - name: install docker-py python module
       pip:
         name: docker-py
