--- a/docker_app_depluy.yml
+++ b/docker_app_depluy.yml
@@ -11,7 +11,7 @@
         name: docker
         state: present
     - name: start docker:
-      service::
+      service:
         name: docker
         state: started
         enabled: yes
