--- a/docker_app_depluy.yml
+++ b/docker_app_depluy.yml
@@ -10,7 +10,7 @@
       yum:
         name: docker
         state: present
-    - name: start docker:
+    - name: start docker
       service:
         name: docker
         state: started
